Revision history for Schedule::Activity

0.1.1 - 2025-..-..
	- Add samples

0.1.0 - 2025-09-28
	- Core functionality
